@@ -1,4 +1,4 @@
-package com.java8;
+package com.javaNewFeatures.java8;
 
 import java.util.Arrays;
 import java.util.List;
@@ -6,6 +6,7 @@ import java.util.Set;
 import java.util.stream.Collectors;
 
 public class MapVSFlatMap {
+
 	private static class Person {
 		private String name;
 		private List<String> location;
@@ -44,25 +45,38 @@ public class MapVSFlatMap {
 		 */
 
 		//	map Example
-		List<String> strings = Arrays.asList("AA", "BB", "CC", "DD", "EE");
-		strings.stream().map(value -> "map-" + value).forEach(System.out :: println);
+		List<String> strings = List.of("AA", "BB", "CC", "DD", "EE");
+
+		strings.stream()
+			.map(value -> "map-" + value)
+			.forEach(System.out :: println);
 
 		//	flatMap Example
-		List<List<String>> lists = Arrays.asList(
-				Arrays.asList("AA"), Arrays.asList("BB"), 
-				Arrays.asList("CC"), Arrays.asList("DD"));
-		lists.stream().flatMap(list -> list.stream().map(value -> "flatMap-" + value)).forEach(System.out :: println);
+		List<List<String>> lists = List.of(
+				List.of("AA"), List.of("BB"), 
+				List.of("CC"), List.of("DD"));
+
+		lists.stream()
+			.flatMap(list -> list.stream().map(value -> "flatMap-" + value))
+			.forEach(System.out :: println);
 		//lists.stream().map(list -> list.stream().map(value -> "flatMap-" + value)).forEach(System.out :: println);
 
-		List<Person> persons = Arrays.asList(
+		List<Person> persons = List.of(
 				new Person("Shobhit", Arrays.asList("Bikaner", "Pali")), 
 				new Person("Rohit", Arrays.asList("Jodhpur", "Jaipur")), 
 				new Person("Rajesh", Arrays.asList("Kota", "Ajmer", "Udaipur")));
 
-		persons.stream().map(person -> person.getName()).forEach(System.out :: println);
+		persons.stream()
+			.map(person -> person.getName())
+			.forEach(System.out :: println);
 
-		persons.stream().flatMap(person -> person.getLocation().stream().map(location -> location)).forEach(System.out :: println);
-		Set<String> locations = persons.stream().flatMap(person -> person.getLocation().stream()).collect(Collectors.toSet());
+		persons.stream()
+			.flatMap(person -> person.getLocation().stream().map(location -> location))
+			.forEach(System.out :: println);
+
+		Set<String> locations = persons.stream()
+			.flatMap(person -> person.getLocation().stream())
+			.collect(Collectors.toSet());
 		System.out.println("Locations - " + locations);
 	}
 }
